homeworks/kuber-3.3/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: app
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 80
          name: backend-http
        - containerPort: 443
          name: backend-https
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: app
spec:
  selector:
    app: backend
  ports:
  - name: back-service-http
    protocol: TCP
    port: 80
    targetPort: backend-http
  - name: back-service-https
    protocol: TCP
    port: 443
    targetPort: backend-https
